Changed column widths

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,10 @@ footer {
     background-color: orchid;
   }
 
+  .col-3 {
+    width: 50%;
+  }
+
 }
 
 
@@ -102,6 +106,10 @@ footer {
 
   footer {
     background-color: goldenrod;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
 
 }
